# aoc2022

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: pytests.yml
aoc2022/: __main__.py
aoc2022/common/: __init__.py  argument_parser.py  base_day.py  read_files.py
aoc2022/days/: __init__.py  day_fetcher.py  supported_days.py
aoc2022/days/day1/: __init__.py  functions.py  puzzle.py
aoc2022/days/day2/: __init__.py  functions.py  puzzle.py
aoc2022/days/day3/: __init__.py  functions.py  puzzle.py
aoc2022/days/day4/: __init__.py  functions.py  puzzle.py
aoc2022/days/day5/: __init__.py  functions.py  puzzle.py
aoc2022/days/day6/: __init__.py  functions.py  puzzle.py
aoc2022/days/day8/: __init__.py  functions.py  puzzle.py
tests/: test_puzzles_blackbox.py
