[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc2022"

version = "1.0.0"

description = "Python package containing some solutions for aoc2022"
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

authors = [
    {name = "Sigvard Johansen Seljelv"}
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest == 7.3.1"
]

[tool.setuptools.packages.find]
include = ["aoc2022"]